Had to remove @Basic from dist.ini because it includes Readme plugin which interfered with having a real README file.

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,23 @@ license = Perl_5
 copyright_holder = Michael Friedman
 copyright_year   = 2012
 
-[@Basic]
+; everything in @Basic except for Readme
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
 [NextRelease]
+[AutoPrereqs]
 [@Git]
 [Git::NextVersion]
 first_version = 0.01
@@ -14,4 +29,3 @@ first_version = 0.01
 [Test::Perl::Critic]
 [PodSyntaxTests]
 [PodCoverageTests]
-[ExtraTests]
